Fix width of Snarl on mobile

--- a/src/less/snarl.less
+++ b/src/less/snarl.less
@@ -155,6 +155,7 @@
         bottom: 0;
         left: 0;
         right: 0;
+        width: auto;
     
         .snarl-notification {
             margin: 0;
